--- a/doc/FAQ.txt
+++ b/doc/FAQ.txt
@@ -59,6 +59,27 @@ Search in your project and remove the file named " Info.plist ", hidding under t
 ***
 
 
+#### Q. I use GrabKit as a library, and when I call [picasagrabber connectWithConnectionIsCompleteBlock:andErrorBlock:] : nothing happens. 
+The method is called, but the Authentication screen of Picasa never appears, and neither of the blocks get called.
+
+**A.** The process to authenticate with Picasa is a bit specific.
+
+The Picasa connector doesn't open a Safari page to let the user authenticate. Instead, it presents a viewController. 
+
+When using the GrabKitPicker, the viewController is presented in the navigation hierarchy of the picker. No action is required on your part.
+ 
+But when you use GrabKit as a library, Picasa's Auth viewController must be displayed.
+
+You can define the controller that must present Picasa's auth controller by implementing the method ```customViewControllerToPresentPicasaAuthController``` from the GRKConfiguratorProtocol in your configurator.
+
+For further details, have a look at the default configurator of the demo project, myGrabKitConfigurator.m .
+
+
+***
+
+
+
+
 ## Design and Architecture
 
 
